# elasticsearch-basics

./: .gitignore  README.md  _quarto-english.yml  _quarto-french.yml  _quarto.yml  advanced.qmd  core-concepts.qmd  downloads.qmd  index.qmd  indexing.qmd  main.py  pyproject.toml  render_all.bat  render_all.ps1  render_all.sh  search.qmd  styles.css
.github/workflows/: publish.yml
_freeze/advanced/execute-results/: html.json
_freeze/aggregations/execute-results/: html.json
_freeze/core-concepts/execute-results/: html.json
_freeze/getting-started/execute-results/: html.json  ipynb.json
_freeze/index/execute-results/: html.json
_freeze/indexing/execute-results/: html.json
_freeze/search/execute-results/: html.json
content/: getting-started.qmd
en/: index.qmd
en/content/: aggregations.qmd  concepts-architecture.qmd  downloads.qmd  getting-started.qmd  index-configuration.qmd  indexing-documents.qmd  kibana-dashboards.qmd  query-languages.qmd
fr/: index.qmd
fr/content/: advanced.qmd  aggregations.qmd  concepts-architecture.qmd  core-concepts.qmd  downloads.qmd  getting-started.qmd  index-configuration.qmd  indexing-documents.qmd  indexing.qmd  kibana-dashboards.qmd  query-languages.qmd  search.qmd
